--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"workbox-precaching": "^7.1.0"
 	},
 	"type": "module"
 }
