--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
 		"vite": "^5.0.3",
 		"workbox-precaching": "^7.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^11.3.0"
+	}
 }
