Add Firebase configuration, update deployment workflow, and modify manifest files for GitHub Pages and Firebase

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,6 +51,20 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
+      - run: rm -f static/manifest.json && cp static/manifest_gh_page.json static/manifest.json
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v4
+  
+  firebase_deploy:
+    needs: build_site
+    runs-on: ubuntu-latest
+
+    steps:
+      - run: rm -f static/manifest.json && cp static/manifest_firebase.json static/manifest.json
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_CORAL_SWIMMER }}
+          channelId: live
+          projectId: coral-swimmer
