--- a/static/manifest_gh_page.json
+++ b/static/manifest_gh_page.json
@@ -4,8 +4,8 @@
     "name": "Deportista Coral Swimmer",
     "short_name": "Deportista",
     "display": "standalone",
-    "start_url": "",
-    "scope": "",
+    "start_url": "/coral-swimmer-athlete",
+    "scope": "/coral-swimmer-athlete",
     "icons": [
       {
         "src": "logo_192.png",
